# googlecli

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
dockerfiles/: Dockerfile
googlectl/: credentials.py  delete.py  insert.py  libgooglectl.py  list.py  main.py  show.py  update.py
