[metadata]
name = googlectl
summary = Command-Line for Google Api
author = Hiroshi KODAMA
author-email = kodamap0@gmail.com

[files]
packages =
    googlectl

[entry_points]
console_scripts =
    googlectl = googlectl.main:main

googlectl.cli =
    user_list = googlectl.list:UserList
    group_list = googlectl.list:GroupList
    group_member_list = googlectl.list:groupMemberList
    user_show = googlectl.show:UserShow
    group_show = googlectl.show:GroupShow
