[metadata]
name = googlectl
summary = Command-Line for Google Api
author = Hiroshi KODAMA
author-email = kodamap0@gmail.com

[files]
packages =
    googlectl

[entry_points]
console_scripts =
    googlectl = googlectl.main:main

googlectl.cli =
    user_list = googlectl.list:UserList
    group_list = googlectl.list:GroupList
    group_member_list = googlectl.list:GroupMemberList
    user_show = googlectl.show:UserShow
    group_show = googlectl.show:GroupShow
    user_insert = googlectl.insert:UserInsert
    group_insert = googlectl.insert:GroupInsert
    group_member_insert = googlectl.insert:GroupMemberInsert
    user_delete = googlectl.delete:UserDelete
    group_delete = googlectl.delete:GroupDelete
    group_member_delete = googlectl.delete:GroupMemberDelete
    user_update = googlectl.update:UserUpdate
    group_update = googlectl.update:GroupUpdate
    group_member_update = googlectl.update:GroupMemberUpdate
    